fix - 공통 필드 상속 및 테스트 코드 수정